--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest  xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.try2">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -12,6 +12,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:windowSoftInputMode="adjustPan"
         android:theme="@style/AppTheme">
         <activity android:name=".Report"></activity>
         <activity android:name=".EditProfile" />
@@ -21,9 +22,9 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".register.SignUpActivity" />
         <activity android:name=".TextActivity" />
-        <activity android:name=".mains.Main2Activity" />
+        <activity   android:windowSoftInputMode="adjustNothing"  android:name=".mains.Main2Activity" />
         <activity android:name=".register.Login" />
-        <activity android:name=".mains.MainActivity">
+        <activity  android:name=".mains.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
